--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2581,5 +2581,12 @@
   "voucher.status.redeemable": "可兌換",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "個項目",
-  "voucher.text.noUsePeriod": "無使用期限"
+  "voucher.text.noUsePeriod": "無使用期限",
+  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "作品將下架且不會出現在列表。",
+  "program.ProgramContentSectionAdminCard.audioContent": "音頻內容",
+  "program.ui.audioContent": "音頻內容",
+  "program.ui.uploadAudioFile": "上傳音頻",
+  "program.text.audioFileLimit": "檔案大小超過250MB，請重新選擇檔案上傳",
+  "program.text.audioFileTips": "建議格式：MP3\n檔案大小限制：250MB",
+  "program.label.audioFile": "音頻"
 }
