--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": "Karena aktivitas Anda tidak dipublikasikan, aktivitas ini tidak akan ditampilkan di halaman.",
   "activity.ui.addTicketPlan": "Tambah Paket Tiket",
   "activity.ui.addTicketSession": "Tambahkan sesi",
+  "activity.ui.allCategory": "All Category",
   "activity.ui.createSession": "Buat Sesi",
   "activity.ui.deleteSession": "Hapus sesi",
   "activity.ui.deleteTicket": "Hapus Tiket",
   "activity.ui.downloadList": "Unduh",
   "activity.ui.participantsList": "Peserta",
   "activity.ui.threshold": "Setidaknya",
-  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Manajemen Aktivitas",
   "admin.AdminMenu.activityAdmin": "Aktivitas",
   "admin.AdminMenu.activityCategory": "Kategori Aktivitas",
@@ -364,16 +364,22 @@
   "blog.label.codeName": "Nama kode URL",
   "blog.label.deletePost": "Hapus Artikel",
   "blog.label.merchandises": "Produk Terkait",
+  "blog.label.pinnedAt": "置頂",
+  "blog.label.pinnedAtDelete": "取消置頂",
+  "blog.label.pinnedAtUpdate": "設定置頂",
   "blog.label.postContent": "Konten artikel",
   "blog.label.postManagement": "Manajemen Artikel",
   "blog.label.source": "Keterangan Keterangan",
   "blog.label.title": "Judul",
+  "blog.label.views": "瀏覽數量",
+  "blog.publicAt": "發布日期",
   "blog.status.notCompleteNotation": "Artikel Anda belum dipublikasikan. Artikel ini tidak akan ditampilkan di halaman.",
   "blog.status.publishedNotation": "Sekarang setelah artikel Anda diterbitkan, artikel ini akan muncul di halaman.",
   "blog.status.unpublishedNotation": "Sekarang setelah artikel Anda diterbitkan, artikel itu akan muncul di halaman.",
   "blog.text.noVideoFound": "Tidak ada video yang ditemukan",
   "blog.text.pasteVideoUrl": "Tempel URL video",
   "blog.text.suggestedPictureSize": "Ukuran gambar yang disarankan: 1200 * 675px",
+  "blog.text.uploadPinnedAtLimmited": "置頂上限為三則",
   "blog.text.uploading": "Mengunggah",
   "blog.text.url": "Bagian terakhir dari URL lengkap, biasanya terdiri dari huruf kecil, angka, atau tanda hubung bahasa Inggris",
   "blog.ui.createPost": "Buat Postingan",
@@ -869,11 +875,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Edit Kata Sandi",
   "common.ui.export": "Ekspor",
-  "common.ui.exportOrder": "Ekspor",
-  "common.ui.exportOrderDiscount": "Ekspor Diskon",
-  "common.ui.exportOrderLog": "Ekspor Pesanan",
-  "common.ui.exportOrderProduct": "Ekspor Item",
-  "common.ui.exportPaymentLog": "Detail Transaksi",
   "common.ui.exportProgramProgress": "Ekspor Kemajuan Pembelajaran",
   "common.ui.facebookLogin": "Login/daftar Facebook",
   "common.ui.gap": "Kesenjangan Garis",
@@ -1508,7 +1509,6 @@
   "member.label.taskTitle": "Judul",
   "member.label.線上課程服務約款": "Kontrak layanan kursus online",
   "member.text.markAsRejection": "Tandai Sebagai Penolakan",
-  "member.text.memberSelect": "Silakan masukkan nomor akun atau Surel",
   "member.text.removeMember": "Status siswa akan diubah menjadi Ditolak dan dihapus dari daftar \"Dalam Pengembangan\".",
   "member.ui.memberReject": "Anggota Ditolak",
   "member.ui.switchCalendar": "Ganti Mode Kalender",
@@ -1852,9 +1852,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "Status Ujian",
   "pages.salesAdminPage.export": "Ekspor Data",
   "pages.salesAdminPage.import": "Impor data",
-  "payment.status.invoiceFailed": "Faktur gagal {errorCode}",
-  "payment.status.invoicePending": "Tidak ada faktur elektronik yang diterbitkan",
-  "payment.status.invoiceSuccess": "Faktur Berhasil",
   "permission.label.all": "Semua izin",
   "permissionAdmin.label.permissionGroup": "Grup Izin",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Setelah grup izin dihapus, grup tersebut tidak dapat dipulihkan, dan anggota yang melekat pada grup izin ini akan dihapus. Anda yakin ingin menghapusnya?",
@@ -2074,7 +2071,6 @@
   "program.text.deleteContentWarning": "Anda yakin ingin menghapus konten ini? Tindakan ini tidak dapat diurungkan",
   "program.text.deletePracticeWarning": "Semua data yang terkait dengan pekerjaan ini akan dihapus dan tidak dapat dipulihkan. Anda yakin ingin menghapusnya?",
   "program.text.deleteQuestionDescription": "Penghapusan pertanyaan tidak dapat dibatalkan. Anda yakin ingin menghapusnya?",
-  "program.text.deleteSectionWarning": "Semua konten di bagian ini akan dihapus, tindakan ini tidak dapat dibatalkan",
   "program.text.discountDownNotation": "Harga atau diskon -Potongan angsuran pertama = jumlah pembayaran angsuran pertama \nEX : 100 - 20 = 80 , isi kolom ini 20",
   "program.text.empty": "Tidak ada masalah program",
   "program.text.enrolledPerpetualCount": "Dibeli: {count}",
@@ -2106,23 +2102,18 @@
   "program.ui.articleContent": "Konten artikel",
   "program.ui.checkProgramContent": "Periksa konten program",
   "program.ui.chooseFile": "Pilih File",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Tambahkan opsi",
   "program.ui.createExerciseQuestion": "Tambahkan Pertanyaan",
   "program.ui.delete": "Hapus file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Hapus Konten",
   "program.ui.deleteQuestion": "Hapus Pertanyaan",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Aktifkan",
   "program.ui.delivery": "Kursus Pengiriman",
   "program.ui.difficulty": "Kesulitan",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Kelola Teks",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Pratinjau",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Unggah ulang",
   "program.ui.sortContents": "Urutkan Konten",
   "program.ui.sortProgram": "Urutkan Program",
@@ -2249,16 +2240,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Jumlah Pembeli",
-  "project.label.isPublished": "Apakah untuk dijual",
-  "project.label.planDescription": "Deskripsi Paket",
-  "project.label.published": "Dirilis, proyek akan tersedia untuk dijual segera setelah dirilis",
-  "project.label.unPublished": "Dihentikan, proyek ini ditangguhkan dari penjualan eksternal dan disembunyikan dari proyek",
-  "project.text.introductionDefaultNotice": "Default untuk menampilkan konten grafis pada versi seluler dan komputer",
-  "project.text.introductionDesktopNotice": "Preferensi akan diberikan pada konten grafis yang ditampilkan pada versi komputer. Jika sama dengan \"Default\", dapat dikosongkan",
   "project.text.noSalePlan": "Tidak ada ketentuan penggalangan dana yang ditetapkan",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "Simpan Proyek",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Berhasil dicabut",
   "promotion.label.amount": "Jumlah",
