--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": " Bởi vì hoạt động của bạn chưa được xuất bản, hoạt động này sẽ không được hiển thị trên trang. ",
   "activity.ui.addTicketPlan": "Thêm gói vé",
   "activity.ui.addTicketSession": " Thêm một phiên ",
+  "activity.ui.allCategory": "All Category",
   "activity.ui.createSession": "Tạo phiên",
   "activity.ui.deleteSession": " Xóa phiên ",
   "activity.ui.deleteTicket": " Xóa vé ",
   "activity.ui.downloadList": "Tải xuống",
   "activity.ui.participantsList": "Người tham gia",
   "activity.ui.threshold": "Ít nhất",
-  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Quản lý quản lý",
   "admin.AdminMenu.activityAdmin": "Hoạt động",
   "admin.AdminMenu.activityCategory": "Phân loại hoạt động",
@@ -364,16 +364,22 @@
   "blog.label.codeName": "Tên mã URL ",
   "blog.label.deletePost": "Xóa bài viết",
   "blog.label.merchandises": "Sản phẩm có Liên quan",
+  "blog.label.pinnedAt": "置頂",
+  "blog.label.pinnedAtDelete": "取消置頂",
+  "blog.label.pinnedAtUpdate": "設定置頂",
   "blog.label.postContent": "Nội dung bài viết",
   "blog.label.postManagement": "Quản lý Bài viết",
   "blog.label.source": "Lưu ý Nhận xét",
   "blog.label.title": " Tiêu đề ",
+  "blog.label.views": "瀏覽數量",
+  "blog.publicAt": "發布日期",
   "blog.status.notCompleteNotation": " Bài viết của bạn chưa được xuất bản. Bài viết này sẽ không được hiển thị trên trang. ",
   "blog.status.publishedNotation": " Bây giờ bài viết của bạn đã được xuất bản, bài viết này sẽ xuất hiện trên trang. ",
   "blog.status.unpublishedNotation": " Bây giờ bài viết của bạn đã được xuất bản, nó sẽ xuất hiện trên trang. ",
   "blog.text.noVideoFound": "Không tìm thấy video",
   "blog.text.pasteVideoUrl": " Dán URL video ",
   "blog.text.suggestedPictureSize": "Kích thước hình ảnh đề xuất: 1200 * 675px",
+  "blog.text.uploadPinnedAtLimmited": "置頂上限為三則",
   "blog.text.uploading": "Đang tải lên",
   "blog.text.url": "Phần cuối cùng của URL hoàn chỉnh, thường bao gồm các chữ cái, số hoặc dấu gạch nối tiếng Anh viết thường",
   "blog.ui.createPost": "Tạo bài đăng",
@@ -869,11 +875,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Chỉnh sửa Mật khẩu",
   "common.ui.export": " Xuất ",
-  "common.ui.exportOrder": "Xuất",
-  "common.ui.exportOrderDiscount": "Giảm giá khi xuất khẩu",
-  "common.ui.exportOrderLog": "Xuất đơn hàng",
-  "common.ui.exportOrderProduct": "Xuất các mặt hàng",
-  "common.ui.exportPaymentLog": " Chi tiết Giao dịch ",
   "common.ui.exportProgramProgress": " Tiến trình học xuất khẩu ",
   "common.ui.facebookLogin": "Đăng nhập / đăng ký Facebook",
   "common.ui.gap": "Khoảng cách dòng ",
@@ -1508,7 +1509,6 @@
   "member.label.taskTitle": " Tiêu đề ",
   "member.label.線上課程服務約款": "Hợp đồng dịch vụ khóa học trực tuyến",
   "member.text.markAsRejection": " Đánh dấu là từ chối ",
-  "member.text.memberSelect": " Vui lòng nhập số tài khoản hoặc E-mail",
   "member.text.removeMember": " Trạng thái của sinh viên sẽ được thay đổi thành Bị Từ chối và bị xóa khỏi danh sách\" Đang phát triển \". ",
   "member.ui.memberReject": "Thành viên bị Từ chối ",
   "member.ui.switchCalendar": " Chuyển Chế độ Lịch ",
@@ -1852,9 +1852,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": " Trạng thái kỳ thi ",
   "pages.salesAdminPage.export": " Xuất dữ liệu ",
   "pages.salesAdminPage.import": " Nhập dữ liệu ",
-  "payment.status.invoiceFailed": "Không mở được {errorCode}",
-  "payment.status.invoicePending": "Hóa đơn điện tử",
-  "payment.status.invoiceSuccess": "Thành công",
   "permission.label.all": "Quyền sở hữu",
   "permissionAdmin.label.permissionGroup": "Nhóm quyền",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Khi các quyền bị xóa, chúng không thể được khôi phục và các thành viên có quyền với các quyền này sẽ được xóa để xác định để xóa nó?",
@@ -2074,7 +2071,6 @@
   "program.text.deleteContentWarning": " Bạn có chắc chắn muốn xóa nội dung này không? Không thể hoàn tác hành động này ",
   "program.text.deletePracticeWarning": " Tất cả dữ liệu liên quan đến công việc này sẽ bị xóa và không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
   "program.text.deleteQuestionDescription": " Không thể hoàn tác việc xóa câu hỏi. Bạn có chắc chắn muốn xóa câu hỏi đó không? ",
-  "program.text.deleteSectionWarning": " Tất cả nội dung trong phần này sẽ bị xóa, không thể hoàn tác hành động này ",
   "program.text.discountDownNotation": " Giá hoặc chiết khấu -Chiết khấu trả góp lần đầu = số tiền trả góp đầu tiên \nEX : 100 - 20 = 80 , điền vào cột này 20 ",
   "program.text.empty": "Không có vấn đề về chương trình",
   "program.text.enrolledPerpetualCount": "Đã mua: {count}",
@@ -2106,23 +2102,18 @@
   "program.ui.articleContent": "Nội dung bài viết",
   "program.ui.checkProgramContent": "Kiểm tra nội dung chương trình",
   "program.ui.chooseFile": " Chọn tệp ",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": " Thêm tùy chọn ",
   "program.ui.createExerciseQuestion": " Thêm câu hỏi ",
   "program.ui.delete": " Xóa tệp ",
   "program.ui.deleteChoice": "DeleteChoice ",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteQuestion": " Xóa câu hỏi ",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": " Bật ",
   "program.ui.delivery": " Khóa học Giao hàng ",
   "program.ui.difficulty": " Khó khăn ",
   "program.ui.editProgram": " Chỉnh sửa chương trình ",
   "program.ui.manageCaption": " Quản lý Phụ đề ",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": " Xem trước ",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Tải lại ",
   "program.ui.sortContents": " Sắp xếp nội dung ",
   "program.ui.sortProgram": "Sắp xếp chương trình",
@@ -2249,16 +2240,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Số lượng người mua",
-  "project.label.isPublished": " Cho dù để bán ",
-  "project.label.planDescription": " Mô tả kế hoạch ",
-  "project.label.published": "Đã phát hành, dự án sẽ có sẵn để bán ngay sau khi nó được phát hành ",
-  "project.label.unPublished": " Đã ngừng hoạt động, dự án này bị tạm ngừng bán ra bên ngoài và bị ẩn khỏi dự án ",
-  "project.text.introductionDefaultNotice": " Mặc định hiển thị nội dung đồ họa trên phiên bản dành cho thiết bị di động và máy tính ",
-  "project.text.introductionDesktopNotice": " Tùy chọn sẽ được cấp cho nội dung đồ họa hiển thị trên phiên bản máy tính. Nếu nó giống với\" Mặc định \", nó có thể được để trống ",
   "project.text.noSalePlan": " Không có điều kiện gây quỹ nào được đặt ",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": " Lưu dự án ",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Phục hồi thành công",
   "promotion.label.amount": " Số lượng ",
