--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": "因你的活動未發佈，此活動並不會顯示在頁面上。",
   "activity.ui.addTicketPlan": "加入票券方案",
   "activity.ui.addTicketSession": "新增場次",
+  "activity.ui.allCategory": "全部分類",
   "activity.ui.createSession": "建立場次",
   "activity.ui.deleteSession": "刪除場次",
   "activity.ui.deleteTicket": "刪除票券",
   "activity.ui.downloadList": "下載名單",
   "activity.ui.participantsList": "參與名單",
   "activity.ui.threshold": "最少",
-  "activity.ui.allCategory": "全部分類",
   "admin.AdminMenu.activities": "活動管理",
   "admin.AdminMenu.activityAdmin": "活動",
   "admin.AdminMenu.activityCategory": "活動分類",
@@ -364,16 +364,22 @@
   "blog.label.codeName": "網址代稱",
   "blog.label.deletePost": "刪除文章",
   "blog.label.merchandises": "相關商品",
+  "blog.label.pinnedAt": "置頂",
+  "blog.label.pinnedAtDelete": "取消置頂",
+  "blog.label.pinnedAtUpdate": "設定置頂",
   "blog.label.postContent": "文章內容",
   "blog.label.postManagement": "文章管理",
   "blog.label.source": "說明備註",
   "blog.label.title": "標題",
+  "blog.label.views": "瀏覽數量",
+  "blog.publicAt": "發布日期",
   "blog.status.notCompleteNotation": "你的文章未發佈，此文章並不會顯示在頁面上。",
   "blog.status.publishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
   "blog.status.unpublishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
   "blog.text.noVideoFound": "找不到影片",
   "blog.text.pasteVideoUrl": "貼上影片網址",
   "blog.text.suggestedPictureSize": "建議圖片尺寸：1200*675px",
+  "blog.text.uploadPinnedAtLimmited": "置頂上限為三則",
   "blog.text.uploading": "上傳中",
   "blog.text.url": "完整網址的最後部分，通常是因由小寫英文字母、數字或連字號組成",
   "blog.ui.createPost": "建立文章",
@@ -869,11 +875,6 @@
   "common.ui.editParticipant": "編輯參與者",
   "common.ui.editPassword": "修改密碼",
   "common.ui.export": "匯出",
-  "common.ui.exportOrder": "匯出資料",
-  "common.ui.exportOrderDiscount": "折扣明細",
-  "common.ui.exportOrderLog": "匯出總表",
-  "common.ui.exportOrderProduct": "訂單明細",
-  "common.ui.exportPaymentLog": "交易明細",
   "common.ui.exportProgramProgress": "匯出學習進度",
   "common.ui.facebookLogin": "Facebook 登入/註冊",
   "common.ui.gap": "行距",
@@ -1512,7 +1513,6 @@
   "member.label.taskTitle": "標題",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "標註為拒絕",
-  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "學員狀態將改為已拒絕，並從「開發中」的名單內抽離。",
   "member.ui.memberReject": "學員拒絕",
   "member.ui.switchCalendar": "切換月曆模式",
@@ -1856,9 +1856,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "測驗狀態",
   "pages.salesAdminPage.export": "匯出資料",
   "pages.salesAdminPage.import": "匯入資料",
-  "payment.status.invoiceFailed": "開立失敗 {errorCode}",
-  "payment.status.invoicePending": "未開立電子發票",
-  "payment.status.invoiceSuccess": "開立成功",
   "permission.label.all": "所有權限",
   "permissionAdmin.label.permissionGroup": "權限組",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "權限組一經刪除即不可恢復，並且會將掛有此權限組的會員移除權限，確定要刪除嗎？",
@@ -2078,7 +2075,6 @@
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deletePracticeWarning": "將刪除所有與此作業相關資料且不可復原，確定要刪除嗎？",
   "program.text.deleteQuestionDescription": "題目刪除即不可恢復，確定要刪除嗎？",
-  "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "沒有課程問題",
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
@@ -2110,23 +2106,18 @@
   "program.ui.articleContent": "圖文內容",
   "program.ui.checkProgramContent": "查看課程內容",
   "program.ui.chooseFile": "選擇檔案",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增選項",
   "program.ui.createExerciseQuestion": "新增題目",
   "program.ui.delete": "刪除檔案",
   "program.ui.deleteChoice": "刪除選項",
   "program.ui.deleteContent": "刪除內容",
   "program.ui.deleteQuestion": "刪除題目",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "啟用",
   "program.ui.delivery": "交付課程",
   "program.ui.difficulty": "難易度",
   "program.ui.editProgram": "編輯課程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "預覽",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上傳",
   "program.ui.sortContents": "排序內容",
   "program.ui.sortProgram": "課程排序",
@@ -2253,16 +2244,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "請輸入拒絕原因",
   "project.ProjectRejectMarkModal.reason": "原因",
   "project.ProjectRejectMarkModal.rejectMark": "拒絕標記",
-  "project.label.isParticipantsVisible": "購買人數",
-  "project.label.isPublished": "是否開賣",
-  "project.label.planDescription": "方案描述",
-  "project.label.published": "發售，專案上架後立即開賣",
-  "project.label.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
-  "project.text.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
-  "project.text.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.text.noSalePlan": "Project sale plan has not been set",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "儲存方案",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "數量",
