--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -2578,11 +2578,13 @@
   "voucher.text.fromNow": "Mulai sekarang",
   "voucher.text.items": "barang",
   "voucher.text.noUsePeriod": "Tidak Ada Periode Penggunaan ",
-  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "Portofolio akan dibatalkan publikasinya dan tidak ditampilkan dalam daftar.",
   "program.ProgramContentSectionAdminCard.audioContent": "konten audio",
   "program.ui.audioContent": "konten audio",
   "program.ui.uploadAudioFile": "Unggah file audio",
   "program.text.audioFileLimit": "Ukuran file melebihi 250MB , silakan pilih kembali file yang akan diunggah",
   "program.text.audioFileTips": "Terima format: .mp3\nUkuran file: 250MB",
-  "program.label.audioFile": "berkas audio"
+  "program.label.audioFile": "berkas audio",
+  "program.DisplayModeSelector.audioTrial": "Uji coba audio",
+  "program.DisplayModeSelector.loginToAudioTrial": "Masuk ke uji coba audio",
+  "program.DisplayModeSelector.payToListen": "Bayar untuk mendengarkan"
 }
