[BUGFIX] add email check and adjust text

--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": "因你的活动未发布，此活动并不会显示在页面上。",
   "activity.ui.addTicketPlan": "加入票券方案",
   "activity.ui.addTicketSession": "新增场次",
+  "activity.ui.allCategory": "全部分類",
   "activity.ui.createSession": "建立场次",
   "activity.ui.deleteSession": "删除场次",
   "activity.ui.deleteTicket": "删除票券",
   "activity.ui.downloadList": "下载名单",
   "activity.ui.participantsList": "参与名单",
   "activity.ui.threshold": "最少",
-  "activity.ui.allCategory": "全部分類",
   "admin.AdminMenu.activities": "活动管理",
   "admin.AdminMenu.activityAdmin": "活动",
   "admin.AdminMenu.activityCategory": "活动分类",
@@ -869,11 +869,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "修改密码",
   "common.ui.export": "汇出",
-  "common.ui.exportOrder": "汇出资料",
-  "common.ui.exportOrderDiscount": "折扣明细",
-  "common.ui.exportOrderLog": "汇出总表",
-  "common.ui.exportOrderProduct": "订单明细",
-  "common.ui.exportPaymentLog": "交易明细",
   "common.ui.exportProgramProgress": "汇出学习进度",
   "common.ui.facebookLogin": "Facebook 登入/注册",
   "common.ui.gap": "行距",
@@ -1508,7 +1503,6 @@
   "member.label.taskTitle": "标题",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "标注为拒绝",
-  "member.text.memberSelect": "请输入帐号或 Email",
   "member.text.removeMember": "学员状态将改为已拒绝，并从「开发中」的名单内抽离。 ",
   "member.ui.memberReject": "学员拒绝",
   "member.ui.switchCalendar": "切换月历模式",
@@ -1852,9 +1846,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "测验状态",
   "pages.salesAdminPage.export": "汇出资料",
   "pages.salesAdminPage.import": "汇入资料",
-  "payment.status.invoiceFailed": "开立失败 {errorCode}",
-  "payment.status.invoicePending": "未开立电子发票",
-  "payment.status.invoiceSuccess": "开立成功",
   "permission.label.all": "所有权限",
   "permissionAdmin.label.permissionGroup": "权限组",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "权限组一经删除即不可恢复，并且会将挂有此权限组的会员移除权限，确定要删除吗？",
@@ -2074,7 +2065,6 @@
   "program.text.deleteContentWarning": "你确定要删除此内容？此动作无法还原",
   "program.text.deletePracticeWarning": "将删除所有与此作业相关资料且不可复原，确定要删除吗？",
   "program.text.deleteQuestionDescription": "题目删除即不可恢复，确定要删除吗？ ",
-  "program.text.deleteSectionWarning": "此区块内的所有内容将被删除，此动作无法还原",
   "program.text.discountDownNotation": "定价或优惠价 - 首期折扣 = 首期支付金额\nEX：100 - 20 = 80，此栏填入 20",
   "program.text.empty": "没有课程问题",
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
@@ -2106,23 +2096,18 @@
   "program.ui.articleContent": "图文内容",
   "program.ui.checkProgramContent": "查看课程内容",
   "program.ui.chooseFile": "选择档案",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增选项",
   "program.ui.createExerciseQuestion": "新增题目",
   "program.ui.delete": "删除档案",
   "program.ui.deleteChoice": "删除选项",
   "program.ui.deleteContent": "删除内容",
   "program.ui.deleteQuestion": "删除题目",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "启用",
   "program.ui.delivery": "交付课程",
   "program.ui.difficulty": "难易度",
   "program.ui.editProgram": "编辑课程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "预览",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上传",
   "program.ui.sortContents": "排序内容",
   "program.ui.sortProgram": "课程排序",
@@ -2202,10 +2187,13 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.deleteWarnText": "刪除不可恢復，確定要刪除嗎？",
   "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
+  "project.ProjectParticipantBlock.invitedSuccessfully": "邀請成功",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectParticipantBlock.participantName": "參與者姓名",
+  "project.ProjectParticipantBlock.remainingDays": "(剩 {remainingDays} 天到期)",
   "project.ProjectPlanAdminModal.deliverables": "交付项目",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2246,19 +2234,12 @@
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
   "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
+  "project.ProjectRejectMarkModal.invalidEmail": "無效的信箱",
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "购买人数",
-  "project.label.isPublished": "是否开卖",
-  "project.label.planDescription": "方案描述",
-  "project.label.published": "发售，专案上架后立即开卖",
-  "project.label.unPublished": "停售，此方案暂停对外销售，并从专案中隐藏",
-  "project.text.introductionDefaultNotice": "预设显示在手机版与电脑版的图文内容",
-  "project.text.introductionDesktopNotice": "优先显示在电脑版的图文内容，若与「预设」一样可留空",
   "project.text.noSalePlan": "尚未订定募资条件",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "储存方案",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "数量",
