--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": "Because your activity is unpublished, this activity will not be displayed on the page.",
   "activity.ui.addTicketPlan": "Add Ticket Plan",
   "activity.ui.addTicketSession": "Add a session",
+  "activity.ui.allCategory": "All Category",
   "activity.ui.createSession": "Create Session",
   "activity.ui.deleteSession": "Delete session",
   "activity.ui.deleteTicket": "Delete Ticket",
   "activity.ui.downloadList": "Download",
   "activity.ui.participantsList": "Participants",
   "activity.ui.threshold": "At least",
-  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Activities",
   "admin.AdminMenu.activityAdmin": "Activity",
   "admin.AdminMenu.activityCategory": "Category",
@@ -869,11 +869,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Edit Password",
   "common.ui.export": "Export",
-  "common.ui.exportOrder": "Export",
-  "common.ui.exportOrderDiscount": "Export Discounts",
-  "common.ui.exportOrderLog": "Export Orders",
-  "common.ui.exportOrderProduct": "Export Items",
-  "common.ui.exportPaymentLog": "Transaction Details",
   "common.ui.exportProgramProgress": "Export Learning Progress",
   "common.ui.facebookLogin": "Facebook login/register",
   "common.ui.gap": "Line Gap",
@@ -1508,7 +1503,6 @@
   "member.label.taskTitle": "Title",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "Mark As Rejection",
-  "member.text.memberSelect": "Please enter account number or Email",
   "member.text.removeMember": "The student status will be changed to Rejected and removed from the \"In Development\" list.",
   "member.ui.memberReject": "Member Rejected",
   "member.ui.switchCalendar": "Switch Calendar Mode",
@@ -1852,9 +1846,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "Exam Status",
   "pages.salesAdminPage.export": "Export Data",
   "pages.salesAdminPage.import": "Import data",
-  "payment.status.invoiceFailed": "Invoice failed {errorCode}",
-  "payment.status.invoicePending": "No electronic invoice has been issued",
-  "payment.status.invoiceSuccess": "Invoice Successful",
   "permission.label.all": "All permissions",
   "permissionAdmin.label.permissionGroup": "Permission Group",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Once a permission group is deleted, it cannot be recovered, and the members who are attached to this permission group will be removed. Are you sure you want to delete it?",
@@ -2074,7 +2065,6 @@
   "program.text.deleteContentWarning": "Are you sure you want to delete this content? This action cannot be undone",
   "program.text.deletePracticeWarning": "All data related to this job will be deleted and cannot be recovered. Are you sure you want to delete it?",
   "program.text.deleteQuestionDescription": "Delete a question is irreversible. Are you sure you want to delete it?",
-  "program.text.deleteSectionWarning": "All content in this section will be deleted, this action cannot be undone",
   "program.text.discountDownNotation": "Price or discount -First installment discount = first installment payment amount \nEX : 100 - 20 = 80 , fill in this column 20",
   "program.text.empty": "No program issue",
   "program.text.enrolledPerpetualCount": "Purchased: {count}",
@@ -2106,23 +2096,18 @@
   "program.ui.articleContent": "Article content",
   "program.ui.checkProgramContent": "Check program content",
   "program.ui.chooseFile": "Choose File",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Add option",
   "program.ui.createExerciseQuestion": "Add Question",
   "program.ui.delete": "Delete file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Delete Content",
   "program.ui.deleteQuestion": "Delete Question",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Enable",
   "program.ui.delivery": "Delivery Course",
   "program.ui.difficulty": "Difficulty",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Manage Captions",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Preview",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Reupload",
   "program.ui.sortContents": "Sort Contents",
   "program.ui.sortProgram": "Sort Program",
@@ -2202,10 +2187,13 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.deleteWarnText": "刪除不可恢復，確定要刪除嗎？",
   "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
+  "project.ProjectParticipantBlock.invitedSuccessfully": "邀請成功",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectParticipantBlock.participantName": "參與者姓名",
+  "project.ProjectParticipantBlock.remainingDays": "(剩 {remainingDays} 天到期)",
   "project.ProjectPlanAdminModal.deliverables": "Project Deliverables",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2246,19 +2234,12 @@
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
   "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
+  "project.ProjectRejectMarkModal.invalidEmail": "無效的信箱",
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Number of Purchasers",
-  "project.label.isPublished": "Whether for sale",
-  "project.label.planDescription": "Plan Description",
-  "project.label.published": "Released, the project will be available for sale as soon as it is released",
-  "project.label.unPublished": "Discontinued, this project is suspended from external sales and is hidden from the project",
-  "project.text.introductionDefaultNotice": "Defaults to display graphic content on mobile and computer versions",
-  "project.text.introductionDesktopNotice": "Preference will be given to the graphic content displayed on the computer version. If it is the same as \"Default\", it can be left blank",
   "project.text.noSalePlan": "No fundraising conditions have been set",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "Save Project",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Revoked successfully",
   "promotion.label.amount": "Amount",
