--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": "Karena aktivitas Anda tidak dipublikasikan, aktivitas ini tidak akan ditampilkan di halaman.",
   "activity.ui.addTicketPlan": "Tambah Paket Tiket",
   "activity.ui.addTicketSession": "Tambahkan sesi",
+  "activity.ui.allCategory": "All Category",
   "activity.ui.createSession": "Buat Sesi",
   "activity.ui.deleteSession": "Hapus sesi",
   "activity.ui.deleteTicket": "Hapus Tiket",
   "activity.ui.downloadList": "Unduh",
   "activity.ui.participantsList": "Peserta",
   "activity.ui.threshold": "Setidaknya",
-  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Manajemen Aktivitas",
   "admin.AdminMenu.activityAdmin": "Aktivitas",
   "admin.AdminMenu.activityCategory": "Kategori Aktivitas",
@@ -869,11 +869,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Edit Kata Sandi",
   "common.ui.export": "Ekspor",
-  "common.ui.exportOrder": "Ekspor",
-  "common.ui.exportOrderDiscount": "Ekspor Diskon",
-  "common.ui.exportOrderLog": "Ekspor Pesanan",
-  "common.ui.exportOrderProduct": "Ekspor Item",
-  "common.ui.exportPaymentLog": "Detail Transaksi",
   "common.ui.exportProgramProgress": "Ekspor Kemajuan Pembelajaran",
   "common.ui.facebookLogin": "Login/daftar Facebook",
   "common.ui.gap": "Kesenjangan Garis",
@@ -1508,7 +1503,6 @@
   "member.label.taskTitle": "Judul",
   "member.label.線上課程服務約款": "Kontrak layanan kursus online",
   "member.text.markAsRejection": "Tandai Sebagai Penolakan",
-  "member.text.memberSelect": "Silakan masukkan nomor akun atau Surel",
   "member.text.removeMember": "Status siswa akan diubah menjadi Ditolak dan dihapus dari daftar \"Dalam Pengembangan\".",
   "member.ui.memberReject": "Anggota Ditolak",
   "member.ui.switchCalendar": "Ganti Mode Kalender",
@@ -1852,9 +1846,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "Status Ujian",
   "pages.salesAdminPage.export": "Ekspor Data",
   "pages.salesAdminPage.import": "Impor data",
-  "payment.status.invoiceFailed": "Faktur gagal {errorCode}",
-  "payment.status.invoicePending": "Tidak ada faktur elektronik yang diterbitkan",
-  "payment.status.invoiceSuccess": "Faktur Berhasil",
   "permission.label.all": "Semua izin",
   "permissionAdmin.label.permissionGroup": "Grup Izin",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Setelah grup izin dihapus, grup tersebut tidak dapat dipulihkan, dan anggota yang melekat pada grup izin ini akan dihapus. Anda yakin ingin menghapusnya?",
@@ -2074,7 +2065,6 @@
   "program.text.deleteContentWarning": "Anda yakin ingin menghapus konten ini? Tindakan ini tidak dapat diurungkan",
   "program.text.deletePracticeWarning": "Semua data yang terkait dengan pekerjaan ini akan dihapus dan tidak dapat dipulihkan. Anda yakin ingin menghapusnya?",
   "program.text.deleteQuestionDescription": "Penghapusan pertanyaan tidak dapat dibatalkan. Anda yakin ingin menghapusnya?",
-  "program.text.deleteSectionWarning": "Semua konten di bagian ini akan dihapus, tindakan ini tidak dapat dibatalkan",
   "program.text.discountDownNotation": "Harga atau diskon -Potongan angsuran pertama = jumlah pembayaran angsuran pertama \nEX : 100 - 20 = 80 , isi kolom ini 20",
   "program.text.empty": "Tidak ada masalah program",
   "program.text.enrolledPerpetualCount": "Dibeli: {count}",
@@ -2106,23 +2096,18 @@
   "program.ui.articleContent": "Konten artikel",
   "program.ui.checkProgramContent": "Periksa konten program",
   "program.ui.chooseFile": "Pilih File",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Tambahkan opsi",
   "program.ui.createExerciseQuestion": "Tambahkan Pertanyaan",
   "program.ui.delete": "Hapus file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Hapus Konten",
   "program.ui.deleteQuestion": "Hapus Pertanyaan",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Aktifkan",
   "program.ui.delivery": "Kursus Pengiriman",
   "program.ui.difficulty": "Kesulitan",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Kelola Teks",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Pratinjau",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Unggah ulang",
   "program.ui.sortContents": "Urutkan Konten",
   "program.ui.sortProgram": "Urutkan Program",
@@ -2202,10 +2187,13 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.deleteWarnText": "刪除不可恢復，確定要刪除嗎？",
   "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
+  "project.ProjectParticipantBlock.invitedSuccessfully": "邀請成功",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectParticipantBlock.participantName": "參與者姓名",
+  "project.ProjectParticipantBlock.remainingDays": "(剩 {remainingDays} 天到期)",
   "project.ProjectPlanAdminModal.deliverables": "Hasil Proyek",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2246,19 +2234,12 @@
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
   "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
+  "project.ProjectRejectMarkModal.invalidEmail": "無效的信箱",
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Jumlah Pembeli",
-  "project.label.isPublished": "Apakah untuk dijual",
-  "project.label.planDescription": "Deskripsi Paket",
-  "project.label.published": "Dirilis, proyek akan tersedia untuk dijual segera setelah dirilis",
-  "project.label.unPublished": "Dihentikan, proyek ini ditangguhkan dari penjualan eksternal dan disembunyikan dari proyek",
-  "project.text.introductionDefaultNotice": "Default untuk menampilkan konten grafis pada versi seluler dan komputer",
-  "project.text.introductionDesktopNotice": "Preferensi akan diberikan pada konten grafis yang ditampilkan pada versi komputer. Jika sama dengan \"Default\", dapat dikosongkan",
   "project.text.noSalePlan": "Tidak ada ketentuan penggalangan dana yang ditetapkan",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "Simpan Proyek",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Berhasil dicabut",
   "promotion.label.amount": "Jumlah",
