--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -173,13 +173,13 @@
   "activity.text.unpublishedNotation": " Bởi vì hoạt động của bạn chưa được xuất bản, hoạt động này sẽ không được hiển thị trên trang. ",
   "activity.ui.addTicketPlan": "Thêm gói vé",
   "activity.ui.addTicketSession": " Thêm một phiên ",
+  "activity.ui.allCategory": "All Category",
   "activity.ui.createSession": "Tạo phiên",
   "activity.ui.deleteSession": " Xóa phiên ",
   "activity.ui.deleteTicket": " Xóa vé ",
   "activity.ui.downloadList": "Tải xuống",
   "activity.ui.participantsList": "Người tham gia",
   "activity.ui.threshold": "Ít nhất",
-  "activity.ui.allCategory": "All Category",
   "admin.AdminMenu.activities": "Quản lý quản lý",
   "admin.AdminMenu.activityAdmin": "Hoạt động",
   "admin.AdminMenu.activityCategory": "Phân loại hoạt động",
@@ -869,11 +869,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Chỉnh sửa Mật khẩu",
   "common.ui.export": " Xuất ",
-  "common.ui.exportOrder": "Xuất",
-  "common.ui.exportOrderDiscount": "Giảm giá khi xuất khẩu",
-  "common.ui.exportOrderLog": "Xuất đơn hàng",
-  "common.ui.exportOrderProduct": "Xuất các mặt hàng",
-  "common.ui.exportPaymentLog": " Chi tiết Giao dịch ",
   "common.ui.exportProgramProgress": " Tiến trình học xuất khẩu ",
   "common.ui.facebookLogin": "Đăng nhập / đăng ký Facebook",
   "common.ui.gap": "Khoảng cách dòng ",
@@ -1508,7 +1503,6 @@
   "member.label.taskTitle": " Tiêu đề ",
   "member.label.線上課程服務約款": "Hợp đồng dịch vụ khóa học trực tuyến",
   "member.text.markAsRejection": " Đánh dấu là từ chối ",
-  "member.text.memberSelect": " Vui lòng nhập số tài khoản hoặc E-mail",
   "member.text.removeMember": " Trạng thái của sinh viên sẽ được thay đổi thành Bị Từ chối và bị xóa khỏi danh sách\" Đang phát triển \". ",
   "member.ui.memberReject": "Thành viên bị Từ chối ",
   "member.ui.switchCalendar": " Chuyển Chế độ Lịch ",
@@ -1852,9 +1846,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": " Trạng thái kỳ thi ",
   "pages.salesAdminPage.export": " Xuất dữ liệu ",
   "pages.salesAdminPage.import": " Nhập dữ liệu ",
-  "payment.status.invoiceFailed": "Không mở được {errorCode}",
-  "payment.status.invoicePending": "Hóa đơn điện tử",
-  "payment.status.invoiceSuccess": "Thành công",
   "permission.label.all": "Quyền sở hữu",
   "permissionAdmin.label.permissionGroup": "Nhóm quyền",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Khi các quyền bị xóa, chúng không thể được khôi phục và các thành viên có quyền với các quyền này sẽ được xóa để xác định để xóa nó?",
@@ -2074,7 +2065,6 @@
   "program.text.deleteContentWarning": " Bạn có chắc chắn muốn xóa nội dung này không? Không thể hoàn tác hành động này ",
   "program.text.deletePracticeWarning": " Tất cả dữ liệu liên quan đến công việc này sẽ bị xóa và không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
   "program.text.deleteQuestionDescription": " Không thể hoàn tác việc xóa câu hỏi. Bạn có chắc chắn muốn xóa câu hỏi đó không? ",
-  "program.text.deleteSectionWarning": " Tất cả nội dung trong phần này sẽ bị xóa, không thể hoàn tác hành động này ",
   "program.text.discountDownNotation": " Giá hoặc chiết khấu -Chiết khấu trả góp lần đầu = số tiền trả góp đầu tiên \nEX : 100 - 20 = 80 , điền vào cột này 20 ",
   "program.text.empty": "Không có vấn đề về chương trình",
   "program.text.enrolledPerpetualCount": "Đã mua: {count}",
@@ -2106,23 +2096,18 @@
   "program.ui.articleContent": "Nội dung bài viết",
   "program.ui.checkProgramContent": "Kiểm tra nội dung chương trình",
   "program.ui.chooseFile": " Chọn tệp ",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": " Thêm tùy chọn ",
   "program.ui.createExerciseQuestion": " Thêm câu hỏi ",
   "program.ui.delete": " Xóa tệp ",
   "program.ui.deleteChoice": "DeleteChoice ",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteQuestion": " Xóa câu hỏi ",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": " Bật ",
   "program.ui.delivery": " Khóa học Giao hàng ",
   "program.ui.difficulty": " Khó khăn ",
   "program.ui.editProgram": " Chỉnh sửa chương trình ",
   "program.ui.manageCaption": " Quản lý Phụ đề ",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": " Xem trước ",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Tải lại ",
   "program.ui.sortContents": " Sắp xếp nội dung ",
   "program.ui.sortProgram": "Sắp xếp chương trình",
@@ -2202,10 +2187,13 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.deleteWarnText": "刪除不可恢復，確定要刪除嗎？",
   "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
+  "project.ProjectParticipantBlock.invitedSuccessfully": "邀請成功",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectParticipantBlock.participantName": "參與者姓名",
+  "project.ProjectParticipantBlock.remainingDays": "(剩 {remainingDays} 天到期)",
   "project.ProjectPlanAdminModal.deliverables": " Project Deliverables ",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2246,19 +2234,12 @@
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
   "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
+  "project.ProjectRejectMarkModal.invalidEmail": "無效的信箱",
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Số lượng người mua",
-  "project.label.isPublished": " Cho dù để bán ",
-  "project.label.planDescription": " Mô tả kế hoạch ",
-  "project.label.published": "Đã phát hành, dự án sẽ có sẵn để bán ngay sau khi nó được phát hành ",
-  "project.label.unPublished": " Đã ngừng hoạt động, dự án này bị tạm ngừng bán ra bên ngoài và bị ẩn khỏi dự án ",
-  "project.text.introductionDefaultNotice": " Mặc định hiển thị nội dung đồ họa trên phiên bản dành cho thiết bị di động và máy tính ",
-  "project.text.introductionDesktopNotice": " Tùy chọn sẽ được cấp cho nội dung đồ họa hiển thị trên phiên bản máy tính. Nếu nó giống với\" Mặc định \", nó có thể được để trống ",
   "project.text.noSalePlan": " Không có điều kiện gây quỹ nào được đặt ",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": " Lưu dự án ",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Phục hồi thành công",
   "promotion.label.amount": " Số lượng ",
