update blogexportcsv setting
update blog csv setting

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -361,6 +361,14 @@
   "auth.SocialLoginButton.googleLogin": "Google Login",
   "auth.SocialLoginButton.lineLogin": "Line Login",
   "auth.SocialLoginButton.parentingLogin": "Parenting Login",
+  "blog.BlogExportModal.author": "文章作者",
+  "blog.BlogExportModal.category": "分類",
+  "blog.BlogExportModal.comments": "留言數",
+  "blog.BlogExportModal.likes": "愛心數",
+  "blog.BlogExportModal.postTags": "標籤",
+  "blog.BlogExportModal.publicAt": "發布日期",
+  "blog.BlogExportModal.title": "文章名稱",
+  "blog.BlogExportModal.views": "瀏覽數量",
   "blog.label.codeName": "Nama kode URL",
   "blog.label.deletePost": "Hapus Artikel",
   "blog.label.merchandises": "Produk Terkait",
@@ -376,6 +384,7 @@
   "blog.status.notCompleteNotation": "Artikel Anda belum dipublikasikan. Artikel ini tidak akan ditampilkan di halaman.",
   "blog.status.publishedNotation": "Sekarang setelah artikel Anda diterbitkan, artikel ini akan muncul di halaman.",
   "blog.status.unpublishedNotation": "Sekarang setelah artikel Anda diterbitkan, artikel itu akan muncul di halaman.",
+  "blog.text.exportButton": "資料輸出",
   "blog.text.noVideoFound": "Tidak ada video yang ditemukan",
   "blog.text.pasteVideoUrl": "Tempel URL video",
   "blog.text.suggestedPictureSize": "Ukuran gambar yang disarankan: 1200 * 675px",
