--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -361,6 +361,14 @@
   "auth.SocialLoginButton.googleLogin": "Google Login",
   "auth.SocialLoginButton.lineLogin": "Line Login",
   "auth.SocialLoginButton.parentingLogin": "Parenting Login",
+  "blog.BlogExportModal.author": "文章作者",
+  "blog.BlogExportModal.category": "分類",
+  "blog.BlogExportModal.comments": "留言數",
+  "blog.BlogExportModal.likes": "愛心數",
+  "blog.BlogExportModal.postTags": "標籤",
+  "blog.BlogExportModal.publicAt": "發布日期",
+  "blog.BlogExportModal.title": "文章名稱",
+  "blog.BlogExportModal.views": "瀏覽數量",
   "blog.label.codeName": "Tên mã URL ",
   "blog.label.deletePost": "Xóa bài viết",
   "blog.label.merchandises": "Sản phẩm có Liên quan",
@@ -376,6 +384,7 @@
   "blog.status.notCompleteNotation": " Bài viết của bạn chưa được xuất bản. Bài viết này sẽ không được hiển thị trên trang. ",
   "blog.status.publishedNotation": " Bây giờ bài viết của bạn đã được xuất bản, bài viết này sẽ xuất hiện trên trang. ",
   "blog.status.unpublishedNotation": " Bây giờ bài viết của bạn đã được xuất bản, nó sẽ xuất hiện trên trang. ",
+  "blog.text.exportButton": "資料輸出",
   "blog.text.noVideoFound": "Không tìm thấy video",
   "blog.text.pasteVideoUrl": " Dán URL video ",
   "blog.text.suggestedPictureSize": "Kích thước hình ảnh đề xuất: 1200 * 675px",
