--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -361,6 +361,14 @@
   "auth.SocialLoginButton.googleLogin": "Google Login",
   "auth.SocialLoginButton.lineLogin": "Line Login",
   "auth.SocialLoginButton.parentingLogin": "Parenting Login",
+  "blog.BlogExportModal.author": "文章作者",
+  "blog.BlogExportModal.category": "分類",
+  "blog.BlogExportModal.comments": "留言數",
+  "blog.BlogExportModal.likes": "愛心數",
+  "blog.BlogExportModal.postTags": "標籤",
+  "blog.BlogExportModal.publicAt": "發布日期",
+  "blog.BlogExportModal.title": "文章名稱",
+  "blog.BlogExportModal.views": "瀏覽數量",
   "blog.label.codeName": "網址代稱",
   "blog.label.deletePost": "刪除文章",
   "blog.label.merchandises": "相關商品",
@@ -376,6 +384,7 @@
   "blog.status.notCompleteNotation": "你的文章未發佈，此文章並不會顯示在頁面上。",
   "blog.status.publishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
   "blog.status.unpublishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
+  "blog.text.exportButton": "資料輸出",
   "blog.text.noVideoFound": "找不到影片",
   "blog.text.pasteVideoUrl": "貼上影片網址",
   "blog.text.suggestedPictureSize": "建議圖片尺寸：1200*675px",
