--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -361,6 +361,14 @@
   "auth.SocialLoginButton.googleLogin": "Google Login",
   "auth.SocialLoginButton.lineLogin": "Line Login",
   "auth.SocialLoginButton.parentingLogin": "Parenting Login",
+  "blog.BlogExportModal.author": "文章作者",
+  "blog.BlogExportModal.category": "分類",
+  "blog.BlogExportModal.comments": "留言數",
+  "blog.BlogExportModal.likes": "愛心數",
+  "blog.BlogExportModal.postTags": "標籤",
+  "blog.BlogExportModal.publicAt": "發布日期",
+  "blog.BlogExportModal.title": "文章名稱",
+  "blog.BlogExportModal.views": "瀏覽數量",
   "blog.label.codeName": "URL codename",
   "blog.label.deletePost": "Delete Article",
   "blog.label.merchandises": "Related Products",
@@ -376,6 +384,7 @@
   "blog.status.notCompleteNotation": "Your article has not been published. This article will not be displayed on the page.",
   "blog.status.publishedNotation": "Now that your article is published, this article will appear on the page.",
   "blog.status.unpublishedNotation": "Now that your article is published, it will appear on the page.",
+  "blog.text.exportButton": "資料輸出",
   "blog.text.noVideoFound": "No videos found",
   "blog.text.pasteVideoUrl": "Paste video URL",
   "blog.text.suggestedPictureSize": "Suggested picture size: 1200 * 675px",
