--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -361,6 +361,14 @@
   "auth.SocialLoginButton.googleLogin": "Google Login",
   "auth.SocialLoginButton.lineLogin": "Line Login",
   "auth.SocialLoginButton.parentingLogin": "Parenting Login",
+  "blog.BlogExportModal.author": "文章作者",
+  "blog.BlogExportModal.category": "分類",
+  "blog.BlogExportModal.comments": "留言數",
+  "blog.BlogExportModal.likes": "愛心數",
+  "blog.BlogExportModal.postTags": "標籤",
+  "blog.BlogExportModal.publicAt": "發布日期",
+  "blog.BlogExportModal.title": "文章名稱",
+  "blog.BlogExportModal.views": "瀏覽數量",
   "blog.label.codeName": "网址代称",
   "blog.label.deletePost": "删除文章",
   "blog.label.merchandises": "相关商品",
@@ -376,6 +384,7 @@
   "blog.status.notCompleteNotation": "你的文章未发布，此文章并不会显示在页面上。",
   "blog.status.publishedNotation": "现在你的文章已发布，此文章会出现在页面上。",
   "blog.status.unpublishedNotation": "现在你的文章已发布，此文章会出现在页面上。",
+  "blog.text.exportButton": "資料輸出",
   "blog.text.noVideoFound": "找不到影片",
   "blog.text.pasteVideoUrl": "贴上影片网址",
   "blog.text.suggestedPictureSize": "建议图片尺寸：1200*675px",
